 * admin/ config changed. please update accordingly
 * WIN32: kill invalidate CRT parameters on shutdown
 * fixed: <=PHP_5_2 duplicate error message failed to include file
 * fixed #283: XCache admin APIs (admin page) cause SEGV if XCache failed to initize
 * fixed possible re-include a file by mixing include/include_once

2.0.0 2012-04-20
Ini Settings Changes
========
 * new: xcache.experimental = Off

ChangeLog
========
 * support for PHP_5_4
 * reduce memory usage by caching 1 for multiple same content files
 * correct __FILE__ __DIR__ supported for hardlinked files
 * fixed #275: one line struct definition was confusing struct parser
 * fixed #102: segv when var cacher is too small
 * fixed #55: segv php tokenizer on certain special situation
 * fixed #278: admin page: wrong layout in opera
 * compiler errors: all compiler warning (E_STRICT only currently) is now cached and is supported for user handler
 * tests/bug52160.phpt: report multiple error correctly

1.3.2 2011-06-04
========
 * avoid possible filename injection in admin page
 * adds 30 seconds timeout to "compiling" flag
 * decompiler: improves decompiling
 * disassembler: improper handling of null field
 * disassembler: DECLARE_INHERITED_CLASS/DELAYED class not found
 * disassembler: don't dump builtin functions
 * fix win32 build against win32 native gnu tools
 * compatibility fix: fix segv on shutdown when ionCube Loader is loaded
 * fixed undefined index for xcache.count=1 and xcache.var_size>1
 * fixed #258: builtin constant memory leak on compile

1.3.1 2010-11-27
========
 * 2G/4G limitation on 64bit arch
 * xcache_unset matching e.g. prefixed_ values

1.3.0 2009-08-04
== ChangeLog ==
 * PHP 5.3 support
 * fixed #138: no segv if cache is not initialized correctly
 * default to 64M for xcache.size in xcache.ini
 * could not show module info in admin page when XCache is the last module
 * wrong http auth realm
 * coverager: font-size and newline fix for firefox